--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,25 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: MNMistry
+email: manismistry@live.co.uk
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Web-designer, programmer, animator.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
+exclude: [
+.git,
+.gitignore,
+.DS_Store,
+CNAME,
+svg,
+scss,
+.sass-cache,
+package.json,
+Gruntfile.js,
+node_modules,
+readme.md
+]
 
 # Build settings
 markdown: kramdown
