--- a/.gitignore
+++ b/.gitignore
@@ -115,7 +115,12 @@ build/
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
 
+Source/
+**.src.html
 gemfile
 Gruntfile.js
 package.json
 Gemfile.lock
+/global/
+/libs/
+/total/
